fix text align

--- a/chrome/src/inject/inject.css
+++ b/chrome/src/inject/inject.css
@@ -44,6 +44,8 @@
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 8px;
+
+  text-align: left;
 }
 
 .cc_box table {
